fix .team-item-wrap & .portfolio-filter-item:not(:last-child)

--- a/css/styles.css
+++ b/css/styles.css
@@ -300,6 +300,8 @@ body {
 
 .team-item-wrap {
     padding: 32px 0;
+
+    background-color: var(--color-white);
 }
 
 .team-item-title {
@@ -333,7 +335,7 @@ body {
 }
 
 .portfolio-filter-item:not(:last-child) {
-    padding-right: 24px;
+    margin-right: 24px;
 }
 
 .portfolio-list {
